test/functional/Sema/ambiguous_overload_candidates.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// Define overloaded functions with the same name but different return types
func getValue(i : Int) -> Int {
    return 42;
}

func getValue(i : Int) -> Float {
    return 3.14;
}

func main() -> Int {
    // This should trigger ambiguous overload resolution
    // The compiler won't be able to determine which getValue() to call
    // without additional type context
    let x = getValue(5);
    // CHECK: 18:13: error: Ambiguous type variable mapping found: multiple valid solutions exist; Consider adding explicit type annotations to resolve the ambiguity
    // CHECK: 10:1: note: Candidate of type: (i32) -> f32
    // CHECK: 6:1: note: Candidate of type: (i32) -> i32

    return 0;
}
